--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
   r2dbc:
     driver-class-name: org.postgresql.Driver
     url: r2dbc:postgresql://localhost:5432/discount
@@ -9,3 +11,4 @@ spring:
 
 server:
   port: 7005
+
